[package]
version = "0.0.0"
name = "vita-pack-vpk"
description = "Generates PSVita VPK archive"
homepage = "https://github.com/Rusty-VitaSDK/vita-pack-vpk"
repository = "https://github.com/Rusty-VitaSDK/vita-pack-vpk"
authors = ["Gabriel GRONDIN <gglinnk@protonmail.com>"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["VitaSDK", "PSVita", "VPK"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.12"
clap = "2.33.3"
walkdir = "2.3.2"
exitcode = "1.1.2"
